--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev":"code . & npm run serve",
+    "dev": "code . & npm run serve",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "json-server": "json-server --watch cars.json --id _id"
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
